Let getSettings() return the constrained track resolution, not source.

This lets MediaStreamTrack.getSettings() on a track that has been
limited in size due to constraints return the constrained size rather
than the original size.

Test note: Due to limits of the mock devices, tests don't work with
content_shell. They have been verified to work in a browser, and
upstreamed to web-platform-tests.
https://github.com/w3c/web-platform-tests/pull/5114

BUG=626595

Review-Url: https://codereview.chromium.org/2742893003
Cr-Commit-Position: refs/heads/master@{#457064}

Former-commit-id: 977056bc7c6be8e98eb98f9702b3f4ed3eb992dd